# AeroDocAssistant

./: .gitignore  docker-compose.yaml  package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: chat_rest.py  chat_router.py  chat_ws.py  documents_rest.py  graph_rest.py  schemas.py
backend/app/core/: chat.py  config.py  container.py  doc_loader.py  doc_manager.py  fragment_relations.py  graph.py  llm_utils.py  search.py  storage.py
backend/app/script/: build_graph_index.py  documents.py  resolve_graph_index.py  test_fragment_relations.py
frontend/: .gitignore  index.html  package.json  tsconfig.json
frontend/src/: App.css  App.tsx
frontend/src/app/: app.tsx  index.tsx  router.tsx
frontend/src/app/styles/: colors.css  common.css  index.css  theme.css
frontend/src/components/: index.tsx
frontend/src/components/ai-chat-box/: ai-chat-box-vm.ts  ai-chat-box.css  ai-chat-box.ts  ai-chat-box.tsx
frontend/src/components/theme-button/: theme-button-vm.ts  theme-button.ts  theme-button.tsx
frontend/src/old/: App.css
frontend/src/pages/: index.tsx
frontend/src/pages/chat-page/: chat-content.tsx  chat-page-vm.ts  chat-page.css  chat-page.tsx
frontend/src/pages/dummy-page/: dummy-page.tsx
frontend/src/pages/graph-page/: graph-page.css  graph-page.tsx
frontend/src/pages/preview-page/: preview-page.css  preview-page.tsx
frontend/src/shared/: index.tsx
frontend/src/shared/api/: api-utils.ts  client.ts  query-client.ts
frontend/src/widgets/: index.tsx
(+50 files in other folders)
