[project]
name = "AeroDocAssistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.4",
    "yandex-cloud-ml-sdk>=0.17.1",
    "yandexcloud>=0.371.0",
]
