[project]
name = "AeroDocAssistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.4",
    "natasha>=1.6.0",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "unstructured[pdf]>=0.18.21",
    "yandex-cloud-ml-sdk>=0.17.1",
    "yandexcloud>=0.371.0",
]
